# arduino-BikeBrakeLight

./: README.md  Заметки.txt  Рабочая_документация.xlsx  Требования.txt
BikeBrakeLight/: BikeBrakeLight.ino  BikeBrakeLight_.ino_  quaternionFilters.cpp  quaternionFilters.h
BikeBrakeLight_DMP/: BikeBrakeLight_DMP.ino
BikeBrakeLight_Quaternion/: BikeBrakeLight_Quaternion.ino
BikeLamp2_main/: BikeLamp2_main.ino
Data/: MPU_QN.TXT  prepare_csv.py  Дампы_регистров_MPU9250_DMP.txt  Дампы_регистров_MPU9250_DMP_2.txt  Дампы_регистров_MPU9250_Wake_On_Motion.txt  Дампы_регистров_MPU9250_Wake_On_Motion_2.txt  Заметки.txt  Отличия_регистров_DMP_Wake-On-Motion.txt
LED_Photocontrol_test/: LED_Photocontrol_test.ino
LED_Photocontrol_test/LED_Photocontrol_test/: LED_Photocontrol_test.ino
MPU9250_Neuton_on_gathered_data/: MPU9250_Neuton_on_gathered_data.ino  Tableau 2020.4.lnk  quaternionFilters.cpp
MPU9250_Neuton_on_gathered_data/.theia/: launch.json
MPU9250_Quaternion_test/: MPU9250_Quaternion_test.ino
MPU9250_SD_datalogger/: MPU9250_SD_datalogger.ino  SD_datalogger.ino_
MPU9250_cycle_time_test/: MPU9250_cycle_time_test.ino  quaternionFilters.cpp
MPU9250_on_gathered_data/: MPU9250_on_gathered_data.ino
MPU9250_quaternion_on_gathered_data/: MPU9250_quaternion_on_gathered_data.ino  quaternionFilters.h
MPU9250_register_dump/: MPU9250_register_dump.ino
MPU9250_wake_on_move_test/: MPU9250_wake_on_move_test.ino
Neuton/Brake9-2022-09-29-I32-750_68695/: README.md
Neuton/BrakeE-22-10-07-A-I32-750_72102/neuton/include/neuton/source/dsp/support/: CMakeLists.txt
Neuton/BrakeM-22-09-29-I-750_73127/pipeline/kws/: CMakeLists.txt
(+441 files in other folders)
